# Aurora_language

./: CMakeLists.txt  README.md  run.sh  test_debug.cpp
Aroura/: Makefile  ast.h  aurora  aurora_types.h  codegen_wasm.c  codegen_wasm.h  lexer.c  main.c  parser.c  parser.h  readMe.md
Aroura/documentation/: auroraDoc.txt
Aroura/examples/: my_code.aur  test.aur  test.wasm
Aroura/src/: ast.c  lexer.h  main.c  runtime.c  runtime.h  simple_runtime.c  simple_runtime.h
docs/: SPEC.md
examples/: array_test.aur  break_continue_simple.aur  break_continue_test.aur  bubble_sort.aur  compound_print_test.aur  compound_test.aur  compound_test2.aur  fib.aur  hello.aur  minimal_array.aur  my_test.aur  my_test_print.aur  ptr_index_print.aur  ptr_index_test.aur  ptr_index_test2.aur  ptr_simple_test.aur  sieve.aur  simple_array.aur  void_test.aur
include/aurora/: config.h
src/: ast.h  codegen.cpp  codegen.h  diagnostics.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  scope.h  sema.cpp  sema.h  token.h  types.cpp  types.h  util.h
stdlib/: aurora_runtime.c
